# vst

./: .gitignore  README.md
onefilter/: CMakeLists.txt  README.md
onefilter/src/dsp/: Biquad.cpp  Biquad.h  LowPassFIlter.cpp  LowPassFilter.h
onefilter/src/plugin/: PluginProcessor.cpp  PluginProcessor.h
onefilter/tests/: LowPassTests.cpp
parametric/: CMakeLists.txt  README.md
parametric/src/core/: Parameters.h
parametric/src/dsp/: BellFilter.cpp  Biquad.cpp  Biquad.h  Filter.h  HighPassFilter.cpp  LowPassFilter.cpp
parametric/src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
